3821B1FI2/7_gemm_cublas/travin_maksim/log.txt
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/7_gemm_cublas/travin_maksim/gemm_cublas.cu(25): error: identifier "cudd_aiceProp" is undefined
    cudd_aiceProp deviceProp{};
    ^

1 error detected in the compilation of "/home/crazyproger/sandbox/cuda-2024/3821B1FI2/7_gemm_cublas/travin_maksim/gemm_cublas.cu".
